# t_tetris

./: Cargo.toml  build.rs
.cargo/: config.toml
src/: custom_functions.rs  main.rs
src/game/: instructions.txt  mod.rs  shapes.rs  tetris_board.rs  tetris_logic.rs  ui.rs  ui_setup.rs
src/loading/: mod.rs
src/menu/: mod.rs
