[package]
name = "t_tetris"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13.2"
bevy-inspector-egui = "0.24.0"
bevy_dev_console = { git = "https://github.com/doonv/bevy_dev_console.git", version = "0.1.0" }

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold", "target-cpu=native"]

[profile.dev]
opt-level = 0
lto = "off"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
codegen-units = 1