[package]
name = "t_tetris"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.0"
bevy-inspector-egui = "0.28.0"
#bevy_dev_console = { git = "https://github.com/doonv/bevy_dev_console.git", version = "0.0.0" }
# bevy_dev_console = { git = "https://github.com/robert-M-Lucas/bevy_dev_console.git", version = "0.1.0" }
rand = "0.8.5"
rand_derive2 = "0.1.21"
log = "0.4.22"

[profile.dev]
opt-level = 0
lto = "off"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
codegen-units = 1
